Fixed some more display bugs on mobile

--- a/client/src/components/login/Login.css
+++ b/client/src/components/login/Login.css
@@ -16,7 +16,7 @@
 }
 
 .loginHeader {
-  font-size: 44px;
+  font-size: 43px;
   margin-bottom: 30px;
 }
 
@@ -48,5 +48,9 @@
 @media only screen and (min-width: 700px) {
   .loginContainer {
     width: 420px;
+  }
+
+  .loginHeader {
+    font-size: 44px;
   }
 }
