--- a/client/src/components/splash/Splash.css
+++ b/client/src/components/splash/Splash.css
@@ -16,9 +16,8 @@
   overflow: hidden;
   width: 100%;
   height: 388px;
-  margin-top: -80px;
-  position: relative;
-  align-items: center;
+  top: 0px;
+  position: absolute;
   justify-content: center;
 }
 
@@ -196,6 +195,7 @@
 @media only screen and (min-width: 1366px) {
   .splashzone {
     width: 575px;
+    top: 10vw;
   }
   .splashzone h1 {
     font-size: 3em;
